# example_08_wxwidgets

./: CMakeLists.txt  CMakePresets.json  README.md
hello_flexGridSizer/: CMakeLists.txt  MainWindow.cpp
hello_gridSizer/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
hello_menu/: App.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
hello_widgets/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
hello_world/: App.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
